--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="icon.webp">
+    <link rel="icon" type="image/webp" href="cyberchat-icon.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cyber Chat</title>
+    <title>CyberChat</title>
   </head>
   <body>
     <div id="root"></div>
